<resources>
    <string name="app_name">Captura Pedido</string>
    <string name="valusername">Emma Shopia</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="item_categorias">Categorias</string>
    <string name="item_destacados">Destacados</string>
    <string name="item_bluubicanos">Bluubicanos</string>
    <string name="item_tiendas">Top tiendas</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="splash_logo_desc">demo</string>
    <string name="menuitem1">Clientes</string>
    <string name="menuitem2">Pedidos</string>
    <string name="menuitem3">Productos</string>
    <string name="menuitem4">Cerrar sesión</string>
    <string name="title_activity_clientes">Captura Pedido</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="crear_producto">PRODUCTO NUEVO</string>
    <string name="editar_producto">EDITAR PRODUCTO</string>
    <string name="detalle_producto">DETALLE DEL PRODUCTO</string>


    <!--LAYOUT-->
    <!--EDIT TEXT-->
    <string name="etNombreProducto">Nombre del Producto</string>
    <string name="etDescripcionProducto">Descripción del Producto</string>
    <string name="etPrecioProducto">Precio del Producto</string>
    <!--TEXTVIEW-->
    <string name="tvNombreProducto">Nombre</string>
    <string name="tvDescripcionProducto">Descripción</string>
    <string name="tvPrecioProducto">Precio</string>

    <!--MENU-->
    <string name="menuItemBuscar">Buscar</string>
    <string name="menuItemCrear">Crear</string>
    <string name="menuItemGuardar">Guardar</string>
    <string name="menuItemActualizar">Actualizar</string>
    <string name="menuItemEliminar">Eliminar</string>

    <string name="google_api_key">AIzaSyAlkn0UK0ANonMkWuRFkX_0lWAAd-tR5-g</string>

</resources>
