<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/itcliente"
            android:icon="@drawable/ic_group_black_36dp"
            android:title="@string/menuitem1" />

        <item
            android:id="@+id/itproducto"
            android:icon="@drawable/ic_layers_black_36dp"
            android:title="@string/menuitem2" />

        <item
            android:id="@+id/itpedido"
            android:icon="@drawable/ic_add_shopping_cart_black_36dp"
            android:title="@string/menuitem3" />

        <item
            android:id="@+id/itlogout"
            android:icon="@drawable/ic_exit_to_app_black_36dp"
            android:title="@string/menuitem4" />

    </group>
</menu>