<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/ic_group_black_36dp"
            android:title="@string/menuitem1" />
        <item
            android:id="@+id/nav_pedido"
            android:icon="@drawable/ic_add_shopping_cart_black_36dp"
            android:title="@string/menuitem2" />
        <item
            android:id="@+id/nav_producto"
            android:icon="@drawable/ic_layers_black_36dp"
            android:title="@string/menuitem3" />
        <item
            android:id="@+id/nav_cerrar"
            android:icon="@drawable/ic_exit_to_app_black_36dp"
            android:title="@string/menuitem4" />
    </group>

</menu>
