<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tvNomCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="texto"
        android:theme="@style/MyTextViewCardData"/>

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/tvNombreProducto"
        android:id="@+id/tvbnombreproducto"
        android:theme="@style/MyTextViewCardHeader"
        android:layout_below="@+id/tvNomCliente" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tvbnombreproducto"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvItemDescripcionProducto"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:text="texto"
                android:layout_below="@+id/tvbnombreproducto"
                android:theme="@style/MyTextViewCardData"
                android:maxLength="25" />
    />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvDescripcionProducto"
                android:theme="@style/MyTextViewCardHeader" />

        </LinearLayout>


    </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_alignTop="@+id/tvbnombreproducto"
            android:layout_alignRight="@+id/linearLayout2"
            android:layout_alignEnd="@+id/linearLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="S/."
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/dim_precio"
                    />

                <TextView
                    android:id="@+id/tvItemPrecioProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="00.00"
                    android:theme="@style/MyTextViewStylePrecio"
                    android:textAlignment="textEnd" />

                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/tvPrecioProducto"
                android:layout_marginLeft="10dp"
                android:theme="@style/MyTextViewCardHeader"
                android:textAlignment="textEnd" />

        </LinearLayout>

    </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>